# UniEval

./: DOC.md  README.md  _config.yml  uni_bench.json  uni_eval.py
models/: install.txt  requirements.txt
models/DALLE/: gen.py
models/FLUX/: gen.py
models/Janus/: uni_gen_und.py  uni_gen_und_flow.py
models/PixArt/: gen.py
models/Qwen2.5-VL/: und.py
models/Show_o/: uni_gen_und.py
models/Show_o/training/: utils.py
models/Show_o_Turbo/: uni_gen_und.py
models/Show_o_Turbo/models/: modeling_showo.py
models/StableDiffusion/: gen.py
models/TokenFlow/: GETTING_STARTED.md  README.md  download_model.py  download_vision_tower.py  uni_gen_und.py
models/TokenFlow/i2t/: pyproject.toml
models/TokenFlow/i2t/llava/: conversation.py  mm_utils.py  utils.py
models/TokenFlow/i2t/llava/model/: __init__.py  builder.py  llava_arch.py
models/TokenFlow/i2t/llava/model/language_model/: llava_mpt.py  llava_qwen.py  llava_qwen_moe.py
models/TokenFlow/i2t/llava/model/multimodal_encoder/: builder.py  open_clip_encoder.py  siglip_encoder.py  tokenflow_vq.py  vision_tokenizer.py
models/TokenFlow/i2t/llava/train/: llava_trainer.py  train.py  train_mem.py
models/TokenFlow/i2t/scripts/v1_5/: train.sh
models/TokenFlow/t2i/: requirements.txt
models/TokenFlow/tokenflow/: requirements_tokenflow.txt
models/UniToken/: INSTALL.md  README.md  download_lumina.py  download_siglip.py  requirements.txt  uni_gen_und.py
models/UniToken/unitoken/: TRAIN.md  finetune_solver_anyres.py  (+3 more)
models/VARGPT/: uni_gen_und.py
models/vila_u/: app.py  download_model.py  environment_setup.sh  inference.py  pyproject.toml  uni_gen_und.py
models/vila_u/scripts/eval/: lmms.sh
models/vila_u/scripts/train/: pretrain.sh  sft.sh
models/vila_u/vila_u/: __init__.py  constants.py  conversation.py  entry.py  media.py  mm_utils.py
models/vila_u/vila_u/cli/: eval.py
models/vila_u/vila_u/data/: dataset.py  datasets_mixture.py  simple_vila_webdataset.py
models/vila_u/vila_u/eval/: __init__.py  registry.yaml
models/vila_u/vila_u/eval/lmms/models/: __init__.py  vila_u.py
models/vila_u/vila_u/model/: __init__.py  builder.py  configuration_vila_u.py  utils.py  vila_u_arch.py
models/vila_u/vila_u/model/language_model/: builder.py  vila_u_llama.py
models/vila_u/vila_u/model/multimodal_encoder/: builder.py  rqvaesigliptransformer_encoder.py
models/vila_u/vila_u/model/multimodal_encoder/rqvaesigliptransformer/rqtransformer/: attention.py  configuration_rqtransformer.py  modeling_rqtransformer.py
models/vila_u/vila_u/model/multimodal_encoder/rqvaesigliptransformer/rqvaesiglip/: modeling_rqvaesiglip.py
models/vila_u/vila_u/model/multimodal_projector/: base_projector.py  builder.py
models/vila_u/vila_u/train/: args.py  train.py  train_mem.py  transformer_normalize_monkey_patch.py  utils.py  vila_u_trainer.py
models/vila_u/vila_u/train/callbacks/: autoresume_callback.py
models/vila_u/vila_u/train/transformers_replace/generation/: utils.py
models/vila_u/vila_u/train/transformers_replace/models/llama/: modeling_llama.py
models/vila_u/vila_u/utils/: distributed.py  io.py  logging.py  media.py  tokenizer.py  utils.py
models/vila_u/vila_u/wids/: wids.py
(+70 files in other folders)
